2005-10-27  Roger Leigh  <rleigh@whinlatter.ukfsn.org>

	* schroot/sbuild-session.c
	(sbuild_session_setup_chroot): Propagate GError from
	sbuild_chroot_setup_lock.

	* schroot/sbuild-chroot-lvm-snapshot.c
	(sbuild_chroot_lvm_snapshot_setup_lock): Use GError.  Refactor to
	propagate GError on failure, and reduce the number of return
	points.
	(sbuild_chroot_lvm_snapshot_setup_session_info): New function,
	split out from sbuild_chroot_lvm_snapshot_setup_lock to increase
	readability.

	* schroot/sbuild-chroot-block-device.c
	(sbuild_chroot_block_device_setup_lock): Use GError.  Refactor to
	propagate GError on failure, and reduce the number of return
	points.

	* schroot/sbuild-chroot-plain.c
	(sbuild_chroot_plain_setup_lock): Use GError.

	* schroot/sbuild-chroot.c
	(sbuild_chroot_error_quark): New function.

	* schroot/sbuild-chroot.h
	(SbuildChrootError): Add error enum.
	(SbuildChrootSetupLockFunc): Add a GError.

2005-10-27  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-config.c
	(sbuild_config_clear_chroot_list): New helper function to clear
	stored chroot list.
	(sbuild_config_clear): New function; uses
	sbuild_config_clear_chroot_list.
	(sbuild_config_finalize): Use sbuild_config_clear_chroot_list.

2005-10-23  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove chroot default item.

	* schroot/schroot.1.in: Document default fallback.

	* schroot/schroot.c (get_chroot_options): Fall back to "default"
	chroot if no chroot was specified.

2005-10-23  Roger Leigh  <rleigh@debian.org>

	* po/en_GB.po: Updated translation.

	* TODO: Update.  All locking and session items removed now that
	they are implemented.

	* schroot/schroot.1.in: Document new "--all-chroots" and
	"--all-sessions" options.

	* schroot/schroot.c: Add "--all-chroots" and "--all-sessions"
	command-line options.
	(get_chroot_options): Use new "--all" options.
	(get_chroot_options): Print a list of invalid chroots found during
	chroot validation.